Add scrambled eggs hyperlink to homepage

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <br>
+    <a href="recipes/scrambled-eggs.html">Scrambled Eggs</a>
 </body>
 </html>
