--- a/recipes/scrambled-eggs.html
+++ b/recipes/scrambled-eggs.html
@@ -6,6 +6,40 @@
     <title>Scrambled Eggs</title>
 </head>
 <body>
-    <h1>Scrambled Eggs</h1>
+    <h1>Scrambled Eggs</h1><br>
+    <img src="https://assets.epicurious.com/photos/57b35f844924889253994109/1:1/w_1600,c_limit/scrambled-eggs.jpg" height="250" width="250">
+    <br>
+    
+    <h2>Description:</h2>
+    <p>
+        Scrambled eggs are a simple and popular dish made by 
+        whisking eggs and cooking them in a hot pan. 
+        The texture can vary from soft and creamy to light and fluffy, 
+        depending on how they're cooked. 
+    </p>
+    <br>
+    <p>
+        To prepare them, eggs are beaten with a little salt, pepper, and sometimes milk or cream for added richness. 
+        The mixture is then poured into a greased skillet over medium heat and gently stirred or folded as it cooks, 
+        forming soft curds.
+         Scrambled eggs can be served plain or topped with herbs, cheese, or vegetables for added flavor.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>
+            Eggs
+        </li>
+        <li>
+            Butter
+        </li>
+        <li>
+            Cheese
+        </li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li></li>
+    </ol>
 </body>
 </html>
