add steps to cook dish

--- a/recipes/scrambled-eggs.html
+++ b/recipes/scrambled-eggs.html
@@ -39,7 +39,30 @@
 
     <h2>Steps</h2>
     <ol>
-        <li></li>
+        <li>
+            Crack the eggs into a bowl: Break the eggs into a bowl and add a pinch of salt and pepper. You can also add a tablespoon of milk or cream if you like your eggs creamier.
+        </li>
+        <li>
+            Whisk the eggs: Using a fork or whisk, beat the eggs until the yolks and whites are well combined and the mixture is a bit frothy.
+        </li>
+        <li>
+            Heat the pan: Place a non-stick skillet or frying pan over medium-low heat. Add the butter or oil and let it melt, ensuring it coats the pan evenly.
+        </li>
+        <li>
+            Pour the eggs into the pan: Once the butter has melted and started to sizzle lightly, pour the beaten eggs into the pan.
+        </li>
+        <li>
+            Stir gently: As the eggs begin to cook, use a spatula to gently stir and fold the eggs from the edges of the pan toward the center. This ensures even cooking and creates soft curds.
+        </li>
+        <li>
+            Cook to desired consistency: Continue stirring until the eggs reach your preferred texture—soft and creamy or firm and fluffy. Be careful not to overcook them, as scrambled eggs can dry out quickly.
+        </li>
+        <li>
+            Remove from heat: When the eggs are almost done but still slightly undercooked, remove the pan from the heat. The residual heat will finish cooking them.
+        </li>
+        <li>
+            Serve immediately: Transfer the scrambled eggs to a plate and enjoy! You can add toppings like cheese, herbs, or vegetables if desired.
+        </li>
     </ol>
 </body>
 </html>
