add image to french toast

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>French Toast</title>
 </head>
 <body>
-    
+    <h1>French Toast</h1>
+    <img src="https://www.seriouseats.com/thmb/haULEn7EZKSPwwLNIf6VFjkNmTA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/perfect-quick-easy-french-toast-hero-03-2a9485bbb12b4cf5abcfef53aa9accd9.jpg" height="250" width="250">
 </body>
 </html>
