add cooking steps

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -42,6 +42,14 @@
         </li>
     
     </ul>
-    
+
+    <h2>Steps:</h2>
+    <ol>
+        <li>Prepare the egg mixture: In a shallow bowl, whisk together the eggs, milk, vanilla extract, cinnamon, and sugar until smooth.</li>
+        <li>Heat the pan: Preheat a large skillet or griddle over medium heat and add a small amount of butter or oil to coat the surface.</li>
+        <li>Dip the bread: Dip each slice of bread into the egg mixture, making sure both sides are fully coated. Let excess egg drip off before placing the bread in the pan.</li>
+        <li>Cook the French toast: Place the soaked bread slices in the heated pan and cook for 2-3 minutes on each side, or until both sides are golden brown.</li>
+        <li>Serve: Remove from the pan and serve immediately with your favorite toppings like syrup, powdered sugar, fresh fruit, or whipped cream.</li>
+    </ol>
 </body>
 </html>
