add baked potato information

--- a/recipes/baked-potato.html
+++ b/recipes/baked-potato.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Baked Potato</title>
 </head>
 <body>
-    
+    <img src="http://t0.gstatic.com/licensed-image?q=tbn:ANd9GcT9uS86EkUVQR6ybdREp0f3bjon4_KEeBfdnFaji1X9m6c3GiiCkPB9P0ERNCXrdnSD" height="250" width="250">
+    <br>
+
+    <h2>Description:</h2>
+    <p>
+
+    </p>
+    <h2>Ingredients:</h2>
+    <ul>
+
+    </ul>
+
+    <h2>Steps:</h2>
+    <ol>
+        
+    </ol>
 </body>
 </html>
