--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -14,7 +14,7 @@
     <p>
         French toast is a popular breakfast dish made by dipping slices of bread in a mixture of beaten eggs, milk, and often sugar or vanilla extract, then frying them in a pan until golden brown. It's typically served warm and topped with ingredients like powdered sugar, syrup, fresh fruit, whipped cream, or butter. Some variations may add cinnamon, nutmeg, or other spices to the egg mixture for extra flavor. It's known for its crispy exterior and soft, custard-like interior.
     </p>
-    <h2>Ingredients</h2>
+    <h2>Ingredients:</h2>
     <ul>
         <li>
             4 slices of day old bread
