add steps to prepare potato

--- a/recipes/baked-potato.html
+++ b/recipes/baked-potato.html
@@ -11,16 +11,46 @@
 
     <h2>Description:</h2>
     <p>
-
+        A baked potato is a whole potato that is cooked by baking it in an oven until the skin is crispy and the inside is soft and fluffy. It's often made from russet potatoes, which are ideal due to their starchy texture. Once baked, the potato is commonly split open and topped with a variety of ingredients such as butter, sour cream, cheese, bacon bits, chives, or any preferred toppings, turning it into a versatile and satisfying dish.
     </p>
     <h2>Ingredients:</h2>
     <ul>
-
+        <li>Butter</li>
+        <li>Sour Cream</li>
+        <li>Shredded Cheese</li>
+        <li>Chives</li>
+        <li>Bacon Bits</li>
+        <li>Salt and Pepper</li>
     </ul>
 
     <h2>Steps:</h2>
     <ol>
-        
+        <li>Preheat the oven: Preheat your oven to 400°F (200°C).</li>
+        <li>
+            Prepare the potatoes:
+            <ul>
+                <li>Scrub the potatoes under cold water to remove any dirt. Pat them dry with a towel.</li>
+                <li>Poke each potato several times with a fork to allow steam to escape during baking.</li>
+            </ul>
+        </li>
+        <li>Coat the potatoes:
+            <ul>
+                <li>Rub each potato with olive oil, ensuring they’re evenly coated.</li>
+                <li>Sprinkle them with kosher salt for a crispy, flavorful skin.</li>
+            </ul>
+        </li>
+        <li>Bake the potatoes:
+            <ul>
+                <li>Place the potatoes directly on the oven rack or on a baking sheet.</li>
+                <li>Bake for 45–60 minutes, depending on the size of the potatoes. They're done when the skin is crispy and a fork easily pierces through to the center.</li>
+            </ul>
+        </li>
+        <li>Serve:
+            <ul>
+                <li>Slice open the baked potatoes and fluff the insides with a fork.</li> 
+                <li>Add your desired toppings like butter, sour cream, cheese, or anything else you prefer.</li>
+            </ul>
+        </li>
     </ol>
 </body>
 </html>
