--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <br>
-    <a href="recipes/scrambled-eggs.html">Scrambled Eggs</a>
+    <ul>
+    <li><a href="recipes/scrambled-eggs.html">Scrambled Eggs</a></li>
+    <li><a href="recipes/french-toast.html">French Toast</a></li>
+
+    <li><a href="recipes/baked-potato.html">Baked Potato</a></li>
+    </ul>
 </body>
 </html>
